# Alfa_Basic_Tasks

./: .gitignore  frames_2024-10-21_22.29.30.gv  frames_2024-10-21_22.37.10.gv
src/camera_py_pkg/: package.xml  setup.py
src/camera_py_pkg/camera_py_pkg/: camera_broadcast.py  gray_level_converter.py  img_viz.py
src/char_to_string_interfaces_pkg/: CMakeLists.txt  package.xml
src/char_to_string_interfaces_pkg/msg/: WeatherForecast.msg
src/char_to_string_interfaces_pkg/srv/: CharToString.srv
src/my_alfa_robot_bringup/: CMakeLists.txt  package.xml
src/my_alfa_robot_bringup/launch/: my_robot_gazebo.launch.py  my_robot_gazebo.launch.xml
src/my_alfa_robot_bringup/worlds/: test_world.world
src/my_alfa_robot_description/: CMakeLists.txt  package.xml
src/my_alfa_robot_description/launch/: display_launch.py
src/my_alfa_robot_description/rviz/: urdf_config.rviz
src/my_alfa_robot_description/urdf/: alfa_main.xacro  alfa_properties.xacro  alfa_properties_gazebo.xacro  camera.xacro  lidar.xacro  my_robot.xacro
src/my_robot_description/: CMakeLists.txt  package.xml
src/my_robot_description/launch/: display_launch.py
src/my_robot_description/urdf/: my_robot.urdf
src/qt_integration_py_pkg/: package.xml  setup.cfg  setup.py
src/qt_integration_py_pkg/qt_integration_py_pkg/: qt_integration.py
src/tasks1_bringup/: CMakeLists.txt  package.xml
src/tasks1_bringup/launch/: tasks1_app.launch.py
src/tasks1_py_pkg/: package.xml  setup.py
src/tasks1_py_pkg/tasks1_py_pkg/: char_to_string_client.py  (+3 more)
tasks1_py_pkg/: package.xml  setup.cfg  setup.py
tasks1_py_pkg/tasks1_py_pkg/: str_hear_subscriber.py  str_read_publisher.py
